# open-license-manager

./: .gitignore  .project  CMakeLists.txt  _config.yml  index.html  install.sh  params.json
_includes/: foot.html  head.html
_layouts/: default.html
_posts/: 2014-11-30-installation.html
src/: CMakeLists.txt
src/tools/base_lib/: CMakeLists.txt
src/tools/bootstrap/: CMakeLists.txt
src/tools/license-generator/: CMakeLists.txt  license-generator.cpp
